<resources>
    <string name="app_name">Manillable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e">e</string>
    <string name="s">s</string>
    <string name="essName">ebusiness software solutions</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="add">Add</string>
</resources>