<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >


    <ImageView
        android:id="@+id/iv_essicon"
        android:layout_width="153dp"
        android:layout_height="169dp"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        app:srcCompat="@drawable/essicon" />

    <TextView
        android:id="@+id/txt_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_essicon"
        android:layout_marginStart="-26dp"
        android:layout_marginTop="-11dp"
        android:layout_toEndOf="@+id/iv_essicon"
        android:fontFamily="@font/inter_bold"
        android:text="@string/e"
        android:textColor="@color/black"
        android:textSize="120dp" />

    <TextView
        android:id="@+id/txt_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_e"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/txt_e"
        android:fontFamily="@font/inter_bold"
        android:text="@string/s"
        android:textColor="@color/black"
        android:textSize="120dp" />

    <TextView
        android:id="@+id/txt_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_s"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/txt_s"
        android:fontFamily="@font/inter_bold"
        android:text="@string/s"
        android:textColor="@color/black"
        android:textSize="120dp" />

    <TextView
        android:id="@+id/txt_essName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/iv_essicon"
        android:layout_alignBottom="@+id/iv_essicon"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/essName"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_essName"
        android:layout_alignStart="@+id/txt_essName"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="29dp" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_Login"
        android:layout_alignStart="@+id/txt_Login"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/inter_extralight"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_alignStart="@+id/user_email"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:fontFamily="@font/inter_extralight"
        android:hint="@string/password"/>

    <ImageView
        android:id="@+id/iv_username"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/user_email"
        android:layout_alignTop="@+id/user_email"
        android:layout_marginStart="-31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/account_logo" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/user_password"
        android:layout_alignTop="@+id/user_password"
        android:layout_marginStart="-31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/password_logo" />

    <TextView
        android:id="@+id/txt_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_password"
        android:layout_alignEnd="@+id/user_password"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/forgot_password"
        android:textColor="@color/app_blue"
        android:textSize="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_below="@+id/user_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/appblue_round_15"
        android:enabled="false"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/line2"
        android:layout_toEndOf="@+id/line"
        android:fontFamily="@font/inter_light"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="108dp"
        android:layout_height="2dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        app:srcCompat="@drawable/line_grey" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="108dp"
        android:layout_height="2dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/line_grey" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_googleLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/appblack_round_15"
        android:enabled="false"
        android:fontFamily="@font/inter_bold"
        android:text="Google Sign-In"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

</RelativeLayout>